# haikalxx

./: .gitmodules  CMakeLists.txt  README.md  haikal.toml
inc/: Array.h  Map.h  Node.h  saha.h
src/: Array.h  List.h  Map.h  Node.h  bak.txt  main.c  main.cpp  main_arena.c  main_malloc.c  saha.h
